# personal-capital-connector-mcp

./: .gitignore  README.md  pyproject.toml
src/personal_capital_connector/: auth.py  cli.py  client.py  server.py
