[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-capital-connector"
version = "0.1.0"
description = "MCP connector for Personal Capital / Empower financial data"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "personalcapital @ git+https://github.com/PaulNorton/personalcapital.git",
    "requests>=2.28",
]

[project.scripts]
personal-capital-connector = "personal_capital_connector.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/personal_capital_connector"]
